# chisel8

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
include/: version.h  version.h.in
include/core/: emu_core.h  emu_definition.h  emu_file.h  emu_init.h  emu_main.h  emu_stack.h  emu_test.h
include/gui/: gui_startup.h  main_window.h  options_window.h  version.h  version.h.in
pictures/: icon.icns  title.xcf
src/: main.c
src/core/: emu_core.c  emu_file.c  emu_init.c  emu_main.c  emu_test.c
src/gui/: gui_startup.c  main_window.c  options_window.c
